# plugio

./: CMakeLists.txt  README.md
apps/mainApp/: CMakeLists.txt  mainApp.cpp
framework/deviceManager/inc/: deviceManager.hpp
framework/packageManager/: CMakeLists.txt
framework/packageManager/inc/: packageManager.hpp  packageManifest.hpp  pluginLibLoader.hpp  pluginLoader.hpp
framework/packageManager/src/: packageManager.cpp  packageManifest.cpp  pluginLibLoader.cpp  pluginLoader.cpp
framework/pluginManager/inc/: pluginManager.hpp
framework/pluginProxy/: CMakeLists.txt
framework/pluginProxy/inc/: inConnectorStub.hpp  pluginProxy.hpp  specServer.hpp  specServerProxy.hpp
framework/pluginProxy/src/: inConnectorStub.cpp  pluginProxy.cpp  specServer.cpp  specServerProxy.cpp
framework/signal/: CMakeLists.txt  Signal.md
framework/signal/inc/: signal.hpp  signalTypes.hpp
framework/slot/: CMakeLists.txt
framework/slot/inc/: slot.hpp
framework/slot/src/: slot.cpp
plugins/: CMakeLists.txt
plugins/apps/simonSays/: CMakeLists.txt
plugins/apps/simonSays/lib/inc/: simonSays.hpp
plugins/apps/simonSays/lib/src/: simonSays.cpp
plugins/inc/: plugin.hpp  specServer.hpp  specServerProxy.hpp
plugins/src/: plugin.cpp  specServer.cpp  specServerProxy.cpp
tests/: CMakeLists.txt  signalGtest.cpp  signalManagerTest.cpp
